[package]
name = "sonata_launcher_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.13.2", features = ["attributes"] }
async-broadcast = "0.7.2"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
futures = "0.3.30"
surf = "2.3.2"
crossterm = "0.27"
async-tungstenite = "0.26.2"
tide-websockets = { git = "https://github.com/Qeatrix/tide-websockets" }
chrono = "0.4.38"
home = "0.5.9"
sys-info = "0.9.1"
lzma-rs = "0.3.0"
uuid = { version = "1.11.0", features = ["v5"] }
sha1_smol = "1.0.1"
sha1 = "0.10.6"
strum = { version = "0.27", features = ["derive"] }
ts-rs = { version = "10.1", features = ["chrono-impl", "serde-json-impl", "no-serde-warnings"] }
http-types = "2.12.0"
thiserror = "2.0.12"
getset = "0.1.6"
os_info = "3.12.0"
regex = "1.11.1"
zip-extensions = "0.8.3"
async-channel = "2.5.0"
